--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -14,8 +14,17 @@
   department: Department of Art and Art History
   person-title: Professor
   abstract: |
-  paper-link:
-  image-name:
+    On December 22, 2017, President Trump signed the GOP Tax Bill, which authorizes oil and gas exploration and development in the coastal plain of the Arctic National Wildlife Refuge, a biological nursery of global significance and a place the indigenous Gwich’in people of northeast Alaska and northwest Canada call, “The Sacred Place Where Life Begins”.
+
+    For millennia, the Gwich’in, who call themselves "the caribou people", have relied upon the Porcupine River caribou herd for nutritional, cultural and spiritual sustenance. Oil drilling in the caribou calving and nursing grounds in the Arctic Refuge coastal plain would be a violation of Gwich’in human rights and will endanger their food security.
+
+    The campaign to create, and then protect the Arctic Refuge, from oil development has been going on for seven decades—the longest environmental conservation and justice campaign in North America. In a book chapter "Long Environmentalism: After the Listening Session," in Ecocriticism and Indigenous Studies: Conservations from Earth to Cosmos (Routledge, 2016), I discuss that campaign. It is also the subject of my [ongoing exhibition at the UNM Art Museum](http://artmuseum.unm.edu/current-exhibitions/long-environmentalism-in-the-near-north-subhankar-banerjee-activism-photographs-writing/). There are two case studies in that chapter, one of which addresses the Arctic Refuge, [which I would urge you to read](http://subhankarbanerjee.org/PDF/long-environmentalism.pdf) as it will serve as a background for our discussion
+
+    On Friday, February 2, I plan to share some of the ideas for a short essay I’m just starting to work on, which will appear in a special issue _Beyond the Extractive View_ in _Social Text Periscope Dossier_. In the piece, I plan to explore two competing claims: (1) the human rights argument of the Gwich’in Nation (as discussed in the “Long Environmentalism” chapter); and, (2) an argument to make money from oil drilling by the "Voices of the Iñupiat", a corporate-funded pro-oil advocacy organization, which was publicly visible for the first time during a Senate committee hearing on November 2, 2017. Spatial humanities could shed light on this rather unique situation and I’m hoping to get feedback from you all.
+
+    On a related but separate note, I’m convening "[The last oil](https://thelastoil.unm.edu/)---a multispecies symposium on Arctic Alaska and beyond", which will take place on the UNM Main Campus from February 21 through February 23.
+  paper-link: http://subhankarbanerjee.org/PDF/long-environmentalism.pdf)
+  image-name: banerjee-poster-sm.jpg
 
 - title:
   person: Eric Magrane
