--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -1,5 +1,5 @@
-- title:
-  subtitle:
+- title: Money or Justice?
+  subtitle: Competing Indigenous Claims & the Politics of Oil in the Arctic Refuge
   person: Subhankar Banerjee
   month: February
   day: "02"
