--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -7,7 +7,7 @@
   date: 02-02-2018
   time: "1:45 - 3:00"
   place: 1104 Mesa Vista Hall
-  upcoming: true
+  upcoming: false
   twitter:
   url: http://www.subhankarbanerjee.org
   affiliation: University of New Mexico
@@ -26,22 +26,31 @@
   paper-link: http://subhankarbanerjee.org/PDF/long-environmentalism.pdf)
   image-name: banerjee-poster-sm.jpg
 
-- title:
+- title: Climate Geopoetics
   person: Eric Magrane
-  date: 01-03-2018
+  date: 03-01-2018
   month: March
   day: "01"
   year: 2018
   time: "3:30 - 5:00"
   place: 1104 Mesa Vista Hall
-  upcoming: false
+  upcoming: true
   twitter:
   url: http://ericmagrane.com/
   affiliation: New Mexico State University
   department: Department of Geography
   person-title: Visiting Assistant Professor
   abstract: |
-  paper-link:
+    Climate change is often framed in scientific terms. However, it is as much a cultural and social issue as it is a scientific issue. Multiple narratives of climate change exist: for example, some see it as an existential and apocalyptic threat to life on earth or a national security issue; others see it as a social and environmental justice issue and a crisis of capitalism; others see it as a hoax and a ‘Trojan Horse’ for unnecessary regulations.
+
+    In the summer of 2017, I was invited to take part in an Art + Science Climate Communication residency at Playa in Oregon. While there, I began a new series of poems that creatively-critically explore and respond to the multiple narratives of climate change. Specifically, each poem takes as its title a quote on climate change. The quotes/titles represent a variety of voices on the issue, from scientific to literary to social theoretical to spiritual to political. The resulting poems have taken a variety of tones, from matter-of-fact, to hopeful, to outraged, to despairing, to sarcastic/satirical, to combative, to lyric meditation.
+
+    The form of this climate geopoetics project allows me to merge my (geo)poetic practice with my human geography research on environmental and climate narratives. I intend to turn this work into a book that combines the poems with an extended critical essay on climate narratives. On March 1, I will share some of the early poems from this project and some ideas for the shape that the book will take. I look forward to feedback.
+
+    The PDF linked to below includes four of the early poems from the project. As “Climate Geopoetics” builds on my ongoing research/creative practice related to climate change, I am also including in the pdf some background: a few recent book contributions/articles. The first is my contribution to the book _Big Energy Poets: Ecopoetry Things Climate Change_ (Staples & King, eds. BlazeVOX, 2017). Following that are two articles that are currently in press: "Healing, belonging, resistance, and mutual care: Reading Indigenous ecopoetics and climate narratives”, forthcoming in the journal _Literary Geographies_, and “Applying the Geohumanities”, forthcoming in the journal _International Journal of Applied Geospatial Research_.
+
+    If you don't have time to make it through everything, please focus on the four short poems and the "Apply the Geohumanities" article (the last one of the PDF).
+  paper-link: http://ericmagrane.com/wp-content/uploads/2018/02/Magrane_Readings_for_SHWG_UNM_march2018.pdf
   image-name:
 
 - title:
