--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -49,7 +49,7 @@
 
     The PDF linked to below includes four of the early poems from the project. As “Climate Geopoetics” builds on my ongoing research/creative practice related to climate change, I am also including in the pdf some background: a few recent book contributions/articles. The first is my contribution to the book _Big Energy Poets: Ecopoetry Things Climate Change_ (Staples & King, eds. BlazeVOX, 2017). Following that are two articles that are currently in press: "Healing, belonging, resistance, and mutual care: Reading Indigenous ecopoetics and climate narratives”, forthcoming in the journal _Literary Geographies_, and “Applying the Geohumanities”, forthcoming in the journal _International Journal of Applied Geospatial Research_.
 
-    If you don't have time to make it through everything, please focus on the four short poems and the "Apply the Geohumanities" article (the last one of the PDF).
+    If you don't have time to make it through everything, please focus on the four short poems and the "Applying the Geohumanities" article (the last one of the PDF).
   paper-link: http://ericmagrane.com/wp-content/uploads/2018/02/Magrane_Readings_for_SHWG_UNM_march2018.pdf
   image-name:
 
