--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -1,3 +1,24 @@
+- title: Atmo-Orientalism: Olfactory Racialization and Environmental Health
+  person: Hsuan Hsu
+  month: March
+  day: 23
+  year: 2018
+  date: 23-03-2018
+  time: "3:30 - 5:00"
+  place: 1104 Mesa Vista Hall
+  upcoming: true
+  twitter:
+  url: http://english.ucdavis.edu/people/hlhsu
+  affiliation: UC-Davis
+  department: Department of English
+  person-title: Professor
+  abstract: |
+    The 2011 map of “New York’s Smelliest Blocks”, in which the cartographer Kate McLean charts the smells of the city identified through interviews with local residents, indiscriminately combines potentially toxic chemical odors such as “perfume” and “car oil” with organic odors—like “five-spice” and “dried fish”—whose “smelliness” has more to do with cultural preferences than environmental health. While the map appears to present an objective perspective on the distribution of unwelcome smells, it obscures the fact that the food smells mapped here are associated with Chinese and Southeast Asian cuisine common in Manhattan’s Chinatown neighborhood. Did McLean’s interviews with local residents include Asian laborers and long-term residents (many of whom may not be easily accessible to English-language interviews), or did they only gather data from tourists and recent arrivals in the neighborhood? Because smells must enter and transform the body in order to be perceived, they’ve historically figured prominently in discourses of environmental health. However, the subjective and uncertain nature of olfactory perception—the difficulty of defining a “bad” smell or of proving the toxicity of specific airborne particulates—makes smell a fuzzy medium for determining what counts as a public nuisance or environmental hazard.
+
+  paper-link: readings/HWG_Hsu.pdf
+  image-name:
+
+
 
 - title: Climate Geopoetics
   person: Eric Magrane
@@ -7,7 +28,7 @@
   year: 2018
   time: "3:30 - 5:00"
   place: 1104 Mesa Vista Hall
-  upcoming: true
+  upcoming: false
   twitter:
   url: http://ericmagrane.com/
   affiliation: New Mexico State University
@@ -28,15 +49,15 @@
 
 
 - title: Practicing the Geohumanities
-  subtitle: Literary Field Guides and Collaborative Art-Science Field Research 
+  subtitle: Literary Field Guides and Collaborative Art-Science Field Research
   person: Eric Magrane
   date: 03-02-2018
   month: March
   day: "02"
   year: 2018
-  time: "3:00 - 5:00"
+  time: "3:00 - 4:00"
   place: 105 Bandelier East
-  upcoming: true
+  upcoming: false
   twitter:
   url: http://ericmagrane.com/
   affiliation: New Mexico State University
@@ -48,23 +69,6 @@
   image-name: magrane-poster-sm.jpg
 
 
-- title:
-  person: Hsuan Hsu
-  month: March
-  day: 23
-  year: 2018
-  date: 23-03-2018
-  time: "3:30 - 5:00"
-  place: 1104 Mesa Vista Hall
-  upcoming: false
-  twitter:
-  url: http://english.ucdavis.edu/people/hlhsu
-  affiliation: UC-Davis
-  department: Department of English
-  person-title: Professor
-  abstract: |
-  paper-link:
-  image-name:
 
 - title:
   person: Coll Thrush
