update for hsu talk

--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -1,4 +1,4 @@
-- title: Atmo-Orientalism: Olfactory Racialization and Environmental Health
+- title: "Atmo-Orientalism: Olfactory Racialization and Environmental Health"
   person: Hsuan Hsu
   month: March
   day: 23
