update for hsu talk

--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -15,7 +15,7 @@
   abstract: |
     The 2011 map of “New York’s Smelliest Blocks”, in which the cartographer Kate McLean charts the smells of the city identified through interviews with local residents, indiscriminately combines potentially toxic chemical odors such as “perfume” and “car oil” with organic odors—like “five-spice” and “dried fish”—whose “smelliness” has more to do with cultural preferences than environmental health. While the map appears to present an objective perspective on the distribution of unwelcome smells, it obscures the fact that the food smells mapped here are associated with Chinese and Southeast Asian cuisine common in Manhattan’s Chinatown neighborhood. Did McLean’s interviews with local residents include Asian laborers and long-term residents (many of whom may not be easily accessible to English-language interviews), or did they only gather data from tourists and recent arrivals in the neighborhood? Because smells must enter and transform the body in order to be perceived, they’ve historically figured prominently in discourses of environmental health. However, the subjective and uncertain nature of olfactory perception—the difficulty of defining a “bad” smell or of proving the toxicity of specific airborne particulates—makes smell a fuzzy medium for determining what counts as a public nuisance or environmental hazard.
 
-  paper-link: readings/HWG_Hsu.pdf
+  paper-link: readings/SHWG_Hsu.pdf
   image-name:
 
 
