update next talk

--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -4,7 +4,7 @@
   day: 23
   year: 2018
   date: 23-03-2018
-  time: "3:30 - 5:00"
+  time: "4:00 - 5:00"
   place: 1104 Mesa Vista Hall
   upcoming: true
   twitter:
@@ -13,10 +13,10 @@
   department: Department of English
   person-title: Professor
   abstract: |
-    “Atmo-Orientalism: Race, Atmosphere, and Environmental Health” considers the process of “environmental exclusion” that comes hand-in-hand with deodorization by constructing a genealogy of discourses that racialize Chinese spaces as atmospheric health threats. Reading a range of legal and cultural discourses conflating the Chinese with bad air, this paper argues that representations of the Chinese as diseased and toxic manifest in the (apparently “race-blind”) form of atmospheric difference. The paper concludes by considering how Asian diasporic texts—from Sui Sin Far’s Mrs. Spring Fragrance (1912) to the work of contemporary olfactory artist and Anicka Yi (who sampled scents from Manhattan’s Koreatown and Chinatown in Life is Cheap (2017)—respond to atmo-orientalism by underscoring how noxious air is sustained by air conditioning at both urban and transnational scales.
+    “Atmo-Orientalism: Race, Atmosphere, and Environmental Health” considers the process of “environmental exclusion” that comes hand-in-hand with deodorization by constructing a genealogy of discourses that racialize Chinese spaces as atmospheric health threats. Reading a range of legal and cultural discourses conflating the Chinese with bad air, this paper argues that representations of the Chinese as diseased and toxic manifest in the (apparently “race-blind”) form of atmospheric difference. The paper concludes by considering how Asian diasporic texts–from Sui Sin Far’s Mrs. Spring Fragrance (1912) to the work of contemporary olfactory artist and Anicka Yi (who sampled scents from Manhattan’s Koreatown and Chinatown in Life is Cheap (2017)—respond to atmo-orientalism by underscoring how noxious air is sustained by air conditioning at both urban and transnational scales.
 
   paper-link: readings/SHWG_Hsu.pdf
-  image-name:
+  image-name: hsu-poster-xsm.jpg
 
 
 
