--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -70,14 +70,14 @@
 
 
 
-- title:
+- title: Rethinking the Centre of Empire: Histories from Indigenous London
   person: Coll Thrush
   month: April
   day: 13
   year: 2018
   date: 13-04-2018
   time: "3:30 - 5:00"
-  place: Waters Room<br>Zimmerman Library
+  place: History Department Common Room<br>(1104 Mesa Vista)
   upcoming: true
   twitter:
   url: http://www.history.ubc.ca/people/coll-thrush
@@ -85,6 +85,7 @@
   department: Department of History
   person-title: Professor
   abstract: |
+    London is famed both as the ancient center of a former empire and as a modern metropolis of bewildering complexity and diversity. In Indigenous London, historian Coll Thrush offers an imaginative vision of the city’s past crafted from an almost entirely new perspective: that of Indigenous children, women, and men who traveled there, willingly or otherwise, from territories that became Canada, New Zealand, Australia, and the United States, beginning in the sixteenth century. They included captives and diplomats, missionaries and shamans, poets and performers. Some, like the Powhatan noblewoman Pocahontas, are familiar; others, like an Odawa boy held as a prisoner of war, have almost been lost to history. By focusing on the city’s imperial entanglements with Indigenous history – entanglements of knowledge, disorder, reason, ritual, discipline, and memory – Thrush shows how London learned to be a global city and how Indigenous people and peoples were central to that process.
   paper-link:
   image-name:
 
