--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -70,7 +70,7 @@
 
 
 
-- title: Rethinking the Centre of Empire: Histories from Indigenous London
+- title: "Rethinking the Centre of Empire: Histories from Indigenous London"
   person: Coll Thrush
   month: April
   day: 13
