--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -77,7 +77,7 @@
   year: 2018
   date: 13-04-2018
   time: "3:30 - 5:00"
-  place: History Department Common Room<br>(1104 Mesa Vista)
+  place: History Common Room<br>1104 Mesa Vista
   upcoming: true
   twitter:
   url: http://www.history.ubc.ca/people/coll-thrush
