--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -94,7 +94,7 @@
   - ["Alive from America","readings/Thrush-Alive-from-America.pdf"]
   - ["City of The Changers","readings/Thrush-City-of-the-Changers.pdf"]
   - ["Interlude Five","readings/Thrush-Interlude-Five.pdf"]
-  image-name:
+  image-name: thrush-poster-750.jpg
 
 - title: GIS Roundtable
   person: GIS Roundtable
