last schedule update

--- a/_data/events/2018-spring.yml
+++ b/_data/events/2018-spring.yml
@@ -1,3 +1,27 @@
+- title: "Rethinking the Centre of Empire"
+  subtitle: "Histories from Indigenous London"
+  person: Coll Thrush
+  month: April
+  day: 13
+  year: 2018
+  date: 13-04-2018
+  time: "3:30 - 5:00"
+  place: History Common Room<br>1104 Mesa Vista
+  upcoming: false
+  next: false
+  twitter:
+  url: http://www.history.ubc.ca/people/coll-thrush
+  affiliation: University of British Colombia
+  department: Department of History
+  person-title: Professor
+  abstract: |
+    London is famed both as the ancient center of a former empire and as a modern metropolis of bewildering complexity and diversity. In Indigenous London, historian Coll Thrush offers an imaginative vision of the city’s past crafted from an almost entirely new perspective: that of Indigenous children, women, and men who traveled there, willingly or otherwise, from territories that became Canada, New Zealand, Australia, and the United States, beginning in the sixteenth century. They included captives and diplomats, missionaries and shamans, poets and performers. Some, like the Powhatan noblewoman Pocahontas, are familiar; others, like an Odawa boy held as a prisoner of war, have almost been lost to history. By focusing on the city’s imperial entanglements with Indigenous history – entanglements of knowledge, disorder, reason, ritual, discipline, and memory – Thrush shows how London learned to be a global city and how Indigenous people and peoples were central to that process.
+  paper-links:
+  - ["Alive from America","readings/Thrush-Alive-from-America.pdf"]
+  - ["City of The Changers","readings/Thrush-City-of-the-Changers.pdf"]
+  - ["Interlude Five","readings/Thrush-Interlude-Five.pdf"]
+  image-name: thrush-poster-750.jpg
+
 - title: "Atmo-Orientalism: Olfactory Racialization and Environmental Health"
   person: Hsuan Hsu
   month: March
@@ -72,31 +96,9 @@
   image-name: magrane-poster-sm.jpg
 
 
-- title: "Rethinking the Centre of Empire"
-  subtitle: "Histories from Indigenous London"
-  person: Coll Thrush
-  month: April
-  day: 13
-  year: 2018
-  date: 13-04-2018
-  time: "3:30 - 5:00"
-  place: History Common Room<br>1104 Mesa Vista
-  upcoming: true
-  next: true
-  twitter:
-  url: http://www.history.ubc.ca/people/coll-thrush
-  affiliation: University of British Colombia
-  department: Department of History
-  person-title: Professor
-  abstract: |
-    London is famed both as the ancient center of a former empire and as a modern metropolis of bewildering complexity and diversity. In Indigenous London, historian Coll Thrush offers an imaginative vision of the city’s past crafted from an almost entirely new perspective: that of Indigenous children, women, and men who traveled there, willingly or otherwise, from territories that became Canada, New Zealand, Australia, and the United States, beginning in the sixteenth century. They included captives and diplomats, missionaries and shamans, poets and performers. Some, like the Powhatan noblewoman Pocahontas, are familiar; others, like an Odawa boy held as a prisoner of war, have almost been lost to history. By focusing on the city’s imperial entanglements with Indigenous history – entanglements of knowledge, disorder, reason, ritual, discipline, and memory – Thrush shows how London learned to be a global city and how Indigenous people and peoples were central to that process.
-  paper-links:
-  - ["Alive from America","readings/Thrush-Alive-from-America.pdf"]
-  - ["City of The Changers","readings/Thrush-City-of-the-Changers.pdf"]
-  - ["Interlude Five","readings/Thrush-Interlude-Five.pdf"]
-  image-name: thrush-poster-750.jpg
 
-- title: GIS Roundtable
+
+- title: This meeting has been postponed until Fall 2018!
   person: GIS Roundtable
   month: May
   day: 11
@@ -105,13 +107,13 @@
   time: "3:30 - 5:00"
   place: Waters Room<br>Zimmerman Library
   upcoming: true
-  next: false
+  next: true
   twitter:
   url:
   affiliation:
   department:
   person-title:
-  abstract: |
+  abstract:
   paper-link:
   image-name:
 
